# ADAMSCARD

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  MyDashboard_ko_KR.ts  main.cpp
.github/workflows/: qt-ci-build.yml
MockDB/: Choice.cpp  Choice.h  Collection.cpp  Collection.h  MultipleChoiceQuestion.cpp  MultipleChoiceQuestion.h  SubjectiveQuestions.cpp  SubjectiveQuestions.h  UserInformation.cpp  UserInformation.h
MockDB/DataCtrl/: BinaryMgr.cpp  BinaryMgr.h  DataMgr.cpp  DataMgr.h  JsonMgr.cpp  JsonMgr.h  TomlMgr.cpp  TomlMgr.h  XmlMgr.cpp  XmlMgr.h  YamlMgr.cpp  YamlMgr.h
Resources/: TitleBar.qml  resources.qrc
UserControls/: TitleBar.cpp  TitleBar.h
